--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: #f5f7fb;
   color: #4d5b9e;
+  padding: 0px 100px;
 }
 .main-overlay {
   display: flex;
@@ -15,6 +16,17 @@ body {
   align-items: center;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.btn-check {
+  margin-top: 20px;
+  width: 20%;
+  align-self: center;
+}
 .quiz-title {
   font-size: 3rem;
   margin: 0;
@@ -32,4 +44,25 @@ body {
   border-radius: 15px;
   color: #f5f7fb;
   font-size: 1.25rem;
+}
+
+.quiz-container {
+  padding-bottom: 20px;
+  border-bottom: 1px solid grey;
+}
+
+.quiz-question {
+  text-align: left;
+  margin: 30px 0;
+}
+.quiz-answers {
+  display: flex;
+  justify-content: space-around;
+}
+.quiz-answers .answers-item {
+  color: #293264;
+  font-size: 1rem;
+  padding: 5px 10px;
+  border: 1px solid #4d5b9e;
+  border-radius: 8px;
 }
