--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,13 @@ body {
 
 .btn-check {
   margin-top: 20px;
-  width: 20%;
+  width: 25%;
   align-self: center;
+  height: 50px;
+  color: white;
+  font-size: 1rem;
+  background: #4d5b9e;
+  border-radius: 10px;
 }
 .quiz-title {
   font-size: 3rem;
@@ -47,7 +52,7 @@ body {
 }
 
 .quiz-container {
-  padding-bottom: 20px;
+  padding: 20px 0px;
   border-bottom: 1px solid grey;
 }
 
@@ -56,8 +61,8 @@ body {
   margin: 30px 0;
 }
 .quiz-answers {
-  display: flex;
-  justify-content: space-around;
+  /* display: flex;
+  justify-content: space-around; */
 }
 .quiz-answers .answers-item {
   color: #293264;
