--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,6 @@
 body {
   background-color: #f5f7fb;
   color: #4d5b9e;
-  padding: 0px 100px;
-}
-.main-overlay {
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
-}
-.main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.btn-check {
-  margin-top: 20px;
-  width: 25%;
-  align-self: center;
-  height: 50px;
-  color: white;
-  font-size: 1rem;
-  background: #4d5b9e;
-  border-radius: 10px;
-}
-.quiz-title {
-  font-size: 3rem;
-  margin: 0;
-}
-.quiz-description {
-  text-align: center;
-  font-size: 1.25rem;
-  margin: 2rem;
-}
-
-.btn-start {
-  width: 193px;
-  height: 52px;
-  background: #4d5b9e;
-  border-radius: 15px;
-  color: #f5f7fb;
-  font-size: 1.25rem;
-}
-
-.quiz-container {
-  padding: 20px 0px;
-  border-bottom: 1px solid grey;
-}
-
-.quiz-question {
-  text-align: left;
-  margin: 30px 0;
-}
-.quiz-answers {
-  /* display: flex;
-  justify-content: space-around; */
-}
-.quiz-answers .answers-item {
-  color: #293264;
-  font-size: 1rem;
-  padding: 5px 10px;
-  border: 1px solid #4d5b9e;
-  border-radius: 8px;
+  padding: 50px 100px;
+  font-size: 20px;
 }
